--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,21 @@ body{
     text-align: center;
     font-family: "Arial";
 }
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 5px30px 0px rgba(0, 0, 0, alpha) ;
+    color: white;
+    font-weight: blue;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.0em;
+}
 #container{
     width: 70%;
     padding: 1em;
