--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,13 +2,16 @@ body{
     color: blue;
     text-align: center;
     font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 #cabecera
 {
     background: #33A;
-    box-shadow: 0px 5px30px 0px rgba(0, 0, 0, alpha) ;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, alpha) ;
     color: white;
-    font-weight: blue;
+    font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
@@ -22,7 +25,7 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 #container h1{
